--- a/mobile_dev_4/pubspec.yaml
+++ b/mobile_dev_4/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   
   flutter_bloc: ^8.1.3 
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
